Added counter to fetch calls and made user load on page load

--- a/public/style.css
+++ b/public/style.css
@@ -92,7 +92,7 @@ li {
 }
 
 /*********************************************/
-/************ FOOTEr START *******************/
+/************ FOOTER START *******************/
 /*********************************************/
 
 footer {
