--- a/public/style.css
+++ b/public/style.css
@@ -91,8 +91,9 @@ button, select, input {
     background: none;
     border: 3px solid greenyellow;
     padding: 12px;
+    font-size: 14px;
 } button:hover, select:hover {
-    cursor: pointer;
+      cursor: pointer;
       border: 3px dashed greenyellow;
   }
 
@@ -176,7 +177,7 @@ footer {
     padding: 40px;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 700px) {
     header {
         justify-content: center;
         align-items: center;
